reverse order of sermons (latest at the top) minor fix of event button (align to right)

--- a/public/stylesheets/_common.sass
+++ b/public/stylesheets/_common.sass
@@ -103,13 +103,4 @@ header .container
 #loaderContainer
   text-align: center
     
-.findOutMore
-  display: inline-block
-  padding: 15px
-  background-color: $color4
-  border-radius: 5px
-  text-transform: uppercase
-  color: white
-  font-size: 1.25em
-  text-decoration: none
 
