--- a/public/stylesheets/_event.sass
+++ b/public/stylesheets/_event.sass
@@ -31,3 +31,17 @@
   font-weight: bold
   padding-bottom: 15px
   text-decoration: underline
+
+#eventContainer
+  div#findOutEvenMoreContainer
+    text-align: right
+
+  .findOutMore
+    display: inline-block
+    padding: 15px
+    background-color: $color4
+    border-radius: 5px
+    text-transform: uppercase
+    color: white
+    font-size: 1em
+    text-decoration: none
