--- a/public/stylesheets/_sermons.sass
+++ b/public/stylesheets/_sermons.sass
@@ -9,7 +9,7 @@ section#sermons
             padding-bottom: 10px
             text-align: right
             button
-                font-size: 1.25em
+                font-size: 1em
                 display: none
                 color: white
                 text-transform: uppercase
